fixed problem with bouncer introduced by nav/contact form z-index fix.

--- a/site/assets/modules/_navigation.css
+++ b/site/assets/modules/_navigation.css
@@ -17,6 +17,7 @@
 	padding: 0px 0 12px 0;
 
 	&--closed {
+		z-index: 1;
 		height: 60px;
 		transition: height 1s;
 		transition: background-color .3s ease-out;
@@ -24,6 +25,7 @@
 	}
 
 	&--open {
+		z-index: 3;
 		height: 225px;
 		transition: height 1s;
 		transition: background-color .3s ease-out;
